Fix padding on mobile and line wrapping

--- a/src/components/AgeChooser/styles.scss
+++ b/src/components/AgeChooser/styles.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 0 0 20px;
+  padding: 0 15px 20px;
   text-align: center;
   color: white;
   font-size: 16px;
