--- a/src/components/ChooserDropdown/styles.scss
+++ b/src/components/ChooserDropdown/styles.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 5px 15px;
+  padding: 5px 0;
   text-align: center;
   color: black;
   max-width: 500px;
